# agente_srag_datasus

./: .env.example  .gitignore  CHANGELOG.md  MASTER_BACKLOG.md  README.md  gitignore  pyproject.toml  requirements.txt
app/: streamlit_app.py
configs/: column_mapping.yaml  metric_catalog.yaml  news_sources.yaml  settings.yaml
docs/: PRD_srag_genai_agent.md  architecture.md  cobertura_avaliacao.md  desafio_indicium_ai.md  descricao_vaga.md  guardrails_security_matrix.md  limitations.md  metric_catalog.md
src/: __init__.py  config.py  pipeline.py
src/agents/: graph.py  llm_comments.py  output_contracts.py  prompts.py  state.py  tools.py
src/audit/: __init__.py  logger.py  manifest.py  run_context.py
src/data/: __init__.py  gitlab_client.py  ingestion.py  opendatasus_client.py  preprocessing.py  schema.py  validation.py
src/guardrails/: domain_allowlist.py  input_guard.py  (+2 more)
tests/: test_agent_graph.py  test_agent_tools.py  test_agent_trace.py  test_charts.py  test_config_loading.py  test_dates.py  test_gitlab_client.py  test_hashing.py  test_ingestion.py  test_input_guardrails.py  test_latest_folder_selection.py  test_manifest.py  test_metrics.py  test_news_allowlist.py  test_news_extraction.py  test_news_ranking.py  test_opendatasus_client.py  test_output_guardrails.py  test_pdf_exporter.py  test_phase3_phase4_smoke.py  test_pipeline_smoke.py  test_preprocessing.py  test_privacy_guardrails.py  test_project_structure.py  test_rag_loaders.py  test_rag_retriever.py  test_report_builder.py  test_report_contract.py  test_streamlit_smoke.py  test_validation.py
(+47 files in other folders)
