[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agente-srag-datasus"
version = "0.1.0"
description = "PoC para relatorios automatizados de SRAG com DataSUS/OpenDataSUS."
requires-python = ">=3.11,<3.13"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
py-modules = ["config", "pipeline"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
